fix two column spacing

--- a/src/styles/components/_two_column.scss
+++ b/src/styles/components/_two_column.scss
@@ -1,7 +1,6 @@
 .two-column {
   display: flex;
   margin-top: -1em;
-  margin-bottom: -2em;
 
   .column {
     display: flex;
